""" Module definition for the main module. """
module(
    name = "lsp-server-cpp-lib",
    version = "1.0.0",
)

# Dependencies from the Bazel Central Registry
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "asio", version = "1.28.2")
bazel_dep(name = "catch2", version = "3.6.0", dev_dependency = True)

# JSON-RPC C++ Library
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "thread_pool",
    build_file = "//third_party/thread_pool:BUILD.bazel",
    sha256 = "be7abecbc420bb87919eeef729b13ff7c29d5ce547bdae284923296c695415bd",
    strip_prefix = "thread-pool-4.1.0",
    urls = ["https://github.com/bshoshany/thread-pool/archive/refs/tags/v4.1.0.tar.gz"],
)

http_archive(
    name = "jsonrpc",
    urls = ["https://github.com/hankhsu1996/jsonrpc-cpp-lib/archive/95b30e9c9bf3a9cfd6031f202c914cd1fa22ccad.tar.gz"],
    strip_prefix = "jsonrpc-cpp-lib-95b30e9c9bf3a9cfd6031f202c914cd1fa22ccad",
    sha256 = "dab34a53fd2d4e159a31a3a1ffe0d58734fccddd1bc13506511a537e1bdfd6d5",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
